added back button on open house page

--- a/crm/templates/crm/open_house.html
+++ b/crm/templates/crm/open_house.html
@@ -46,4 +46,5 @@
 {% else %}
   <p>No open house events created yet.</p>
 {% endif %}
+<a href="{% url 'lead_list' %}" class="btn btn-secondary mt-4">← Back to Leads</a>
 {% endblock %}
